--- a/main/ch2_background.tex
+++ b/main/ch2_background.tex
@@ -290,10 +290,10 @@ Most of the studies to date, however, employ analytical methods that assume brai
 
 MRI studies often require that participants lay completely still for lengthy periods of time, especially when the experimental protocol includes several imaging modalities or task paradigms. Head movement is one of the most intractable and potentially harming confounds in this type of data, causing misalignment of subsequent frames and, as a consequence, BOLD signal or structural estimates that do not correspond to true effects \citep{Friston1996,Siegel2017}. Compared to adults, children have decreased inhibitory control \citep{Bedard2002}, and may thus find it harder to remain still during experiments, particularly  given the distracting environment of scanning sessions \citep{Greene2016}. Unsurprisingly, then, children and adolescents tend to present much higher total head motion than adult participants \citep{Satterthwaite2013b}, making the data potentially more susceptible to results that do not reflect reality \citep{Power2012}. Motion scrubbing has become and increasingly accepted --- and stringent --- way of dealing with this type of artefact over recent years \citep{Power2014a,Laumann2016}, but when the data is highly affected by motion it leads to significant data loss. The best approach is, therefore, to avoid movement as much as possible.
 
-Unsurprinsingly, head motion in fMRI experiments involving children tends to increase with the duration of experiments both in terms of run and session time \citep{Engelhardt2017}. While taking breaks between sessions has been suggested as a way to reduce run length-related artefacts, a trade-off must be found between implementing these and keeping the total recording time as short as possible \citep{Meissner2019}.  Another design-related consideration that influences head motion in child studies is the experimental paradigm \citep{Yuan2009a}. Children are less likely to move when they have something to pay attention to, such as in task-based experiments, as compared to resting-state ones \citep{Engelhardt2017}. Given the above, a potentially reasonable trade-off for protocols that include both types of experimental paradigms would be to perform the resting-state session as early as possible, and task-based sessions in sequence, all while trying to keep the total scanning time as short as possible. 
+Unsurprisingly, head motion in fMRI experiments involving children tends to increase with the duration of experiments both in terms of run and session time \citep{Engelhardt2017}. While taking breaks between sessions has been suggested as a way to reduce run length-related artefacts, a trade-off must be found between implementing these and keeping the total recording time as short as possible \citep{Meissner2019}.  Another design-related consideration that influences head motion in child studies is the experimental paradigm \citep{Yuan2009a}. Children are less likely to move when they have something to pay attention to, such as in task-based experiments, as compared to resting-state ones \citep{Engelhardt2017}. Given the above, a potentially reasonable trade-off for protocols that include both types of experimental paradigms would be to perform the resting-state session as early as possible, and task-based sessions in sequence, all while trying to keep the total scanning time as short as possible. 
 
 
-An approach that has been increasingly agreed as a measure to reduce head motion or drop-outs due to scanner-anxiety is to familiarise children with the scan environment as much as possible before the scan itself takes place \citep{Greene2016}, to help them feel safe and relaxed. A simple strategy is to manage the participants' expectations by showing a child-friendly information video describing the MRI procedure \citep{Thomason2009}. In addition, requests for the child to remain still may be done in a fun way, such as suggesting they are playing "Statue". Mock scanners can also be used as a way to reduce scanning time, giving the child the chance to live through the experiment in advance, either through commercial mock scanners or improvised versions \citep{DeBie2010,Barnea-Goraly2014}. Furthemore, implementing training sessions to teach participants what levels of movement are acceptable or not may also improve data quality. Many children simply do not understand to what degree they are moving or just forget having been asked to stay still during the scan, so receiving some form of feedback --- be it verbal or otherwise --- helps them understand what it really means to remain immobile \citep{DeBie2010}. Finally, decorating the scanner with child-friendly, colourful stickers to make it look less like a medical device has been shown to be a simple yet efficient measure \citep{Nordahl2016}. Figure \ref{fig:MRI} shows the scanner used at Campus Biotech, in Geneva, Switzerland, where the data for the studies presented in this thesis were collected.
+An approach that has been increasingly agreed as a measure to reduce head motion or drop-outs due to scanner-anxiety is to familiarise children with the scan environment as much as possible before the scan itself takes place \citep{Greene2016}, to help them feel safe and relaxed. A simple strategy is to manage the participants' expectations by showing a child-friendly information video describing the MRI procedure \citep{Thomason2009}. In addition, requests for the child to remain still may be done in a fun way, such as suggesting they are playing "Statue". Mock scanners can also be used as a way to reduce scanning time, giving the child the chance to live through the experiment in advance, either through commercial mock scanners or improvised versions \citep{DeBie2010,Barnea-Goraly2014}. Furthermore, implementing training sessions to teach participants what levels of movement are acceptable or not may also improve data quality. Many children simply do not understand to what degree they are moving or just forget having been asked to stay still during the scan, so receiving some form of feedback --- be it verbal or otherwise --- helps them understand what it really means to remain immobile \citep{DeBie2010}. Finally, decorating the scanner with child-friendly, colourful stickers to make it look less like a medical device has been shown to be a simple yet efficient measure \citep{Nordahl2016}. Figure \ref{fig:MRI} shows the scanner used at Campus Biotech, in Geneva, Switzerland, where the data for the studies presented in this thesis were collected.
 
 
 
