--- a/main/ch4_ORFi.tex
+++ b/main/ch4_ORFi.tex
@@ -234,7 +234,7 @@ With this study we assessed for the first time in a young population and using f
 
 Behaviourally, participants performed the test without difficulties, no differences in the accuracy were found, neither between the two types of stimuli (Distractors and Targets) nor between the two runs (1, 2). Moreover, the majority of participants performed well, making very few errors. This is similar to healthy adults, who had no difficulties to correctly perform the task even when runs were separated by only 1 minute \citep{Schnider1999, Wahlen2011}. Our results corroborate the idea that at this age ORFi is already an intuitive and efficacious cognitive process, corresponding to the storage capacity at that age \citep{Liverani2017}. 
 
-Regarding reaction times, responses were slower in the second run of the task compared to the first run, reflecting the main challenge of the task, which is consistent with previous studies \citep{Bouzerda-Wahlen2015, Liverani2016, Liverani2017}. It appears that distinguishing between memories that are pertinent with the ongoing reality or not is more time consuming and takes more cognitive effort than simply recognising previously seen images. Our previous study assessing orbitofrontal reality filtering in children highlighted a significant difference between Distracters and Targets both for accuracy and reaction times \citep{Liverani2017}. In the current study participants were older, and they managed to distinguish almost perfectly between images seen in the current or previous run, performing at ceiling effect. Therefore, this could explain why no differences in accuracy and reaction time have been found between the two conditions. 
+Regarding reaction times, responses were slower in the second run of the task compared to the first run, reflecting the main challenge of the task, which is consistent with previous studies \citep{Bouzerda-Wahlen2015, Liverani2016, Liverani2017}. It appears that distinguishing between memories that are pertinent with the ongoing reality or not is more time consuming and takes more cognitive effort than simply recognising previously seen images. Our previous study assessing orbitofrontal reality filtering in children highlighted a significant difference between Distractors and Targets both for accuracy and reaction times \citep{Liverani2017}. In the current study participants were older, and they managed to distinguish almost perfectly between images seen in the current or previous run, performing at ceiling effect. Therefore, this could explain why no differences in accuracy and reaction time have been found between the two conditions. 
 
 OFC activation was significantly stronger during the second run, which tests ORFi. Thus, our neuroimaging data in early adolescents were in line with lesion and imaging studies in adults, indicating that in this younger population, like in adults, the ORFi mechanism is needed to accomplish the second run of the task, and it is associated with specific OFC activation. Moreover, compared to Targets, OFC activation significantly increases in response to Distractors, stimuli that specifically require ORFi. Thus, using fMRI to explore ORFi for the first time, we confirmed previous findings showing that the ability to select information pertaining to the ongoing reality and to suppress irrelevant memory traces is associated with the activation of the OFC. 
 
